# 24.7.2-HW-04

./: README.md  api.py  pyproject.toml  settings.py
tests/: test_pet.py
